--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ PORT = 3000
 MYSQL_HOST="localhost"
 MYSQL_USER="root"
 MYSQL_PASSWORD="mysql"
-MYSQL_DATABASE="pokemon"
+MYSQL_DATABASE="bd_exercices"
 MYSQL_CONNECTION_LIMIT = 10
