--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PORT = 3000
+PORT=3000
 MYSQL_HOST="localhost"
 MYSQL_USER="root"
-MYSQL_PASSWORD="mysql"
+MYSQL_PASSWORD="r00t_bd2"
 MYSQL_DATABASE="bd_exercices"
-MYSQL_CONNECTION_LIMIT = 10
+MYSQL_CONNECTION_LIMIT=10
